# DSPy_Procurement

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
MyMilvus/: milvus-light.sh  milvus_init.py
config/: business_rules.py  milvus_collections.py  milvus_collections.yaml  retrievers.py  settings.py
faker/: data_generator.py
modules/: analysis.py  contract_term_safeguard.py  ranking.py  refinement.py  requirement_analysis.py  risk_mining.py  safeguards.py  signatures.py  suppliers.py
tests/: pipeline_test.py
tests/unit/: test_refinement.py
